<resources>
    <string name="app_name">Madapp</string>
    <string name="log">login</string>
    <string name="logHint01">Enter Email</string>
    <string name="logHint02">Enter  Password</string>
    <string name="fpReg">Registration</string>
    <string name="Reg">Registration</string>
    <string name="home">Welcome to the biggest shoe store</string>
    <string name="home2">Latest Fastions Quality Shoe\'s Realiable Service Under One Store</string>
    <string name="SelectSt">Select Your Shoe Type</string>
    <string name="casualList01">Select Your Shoe Design</string>
    <string name="Admin">Admin Profile</string>
    <string name="SelectSt02">Cashual Shoes</string>
    <string name="SelectSt03">Formal Shoes</string>
    <string name="editDetailsC">Casual Shoes</string>
    <string name="Cart">YOUR CART</string>
    <string name="D1">Design01</string>
    <string name="D2">Design02</string>
    <string name="D3">Design03</string>
    <string name="D4">Design04</string>
    <string name="D5">Design05</string>
    <string name="D6">Design06</string>
    <string name="EditSD">Edit Shoe Details</string>
    <string name="EditSD01">New Price</string>
    <string name="EditSD02">Available Sizes</string>
    <string name="EditSD03">Description</string>
    <string name="FeedBack">FeedBack</string>
    <string name="feedback01">Name</string>
    <string name="Feedback02">Email</string>
    <string name="FeedBack04">ADD FEEDBACK</string>
    <string name="userprofile">Name</string>
    <string name="userprofile01">Email</string>
    <string name="userprofile03">Phone</string>
    <string name="userprofile05">Edit Profile</string>
    <string name="RUsers">Remove Users</string>
    <string name="RUsers02">People Who Misuse Our Property And Breach Our Regulations</string>
    <string name="Customize">Customize Your Own Design</string>
    <string name="customize01">Sir/Madam to get your Shoe customized and to get your Customization done in an accurate manner.</string>
    <string name="Customize02">You’ll be directed by our management for the necessary details</string>
    <string name="Customize03">Feel free to contact us</string>
    <string name="Homee">Enter The Store</string>
    <string name="Homeee2">Customize Your Own</string>
</resources>