<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_02"
    tools:context=".FeedBack">

    <Button
        android:id="@+id/button33"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="#66DBDDA7"
        android:fontFamily="serif"
        android:text="SUBMIT"
        android:textColor="#F6F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText11"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:background="#66DBDDA7"
        android:ellipsize="middle"
        android:hint="@string/FeedBack04"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText10"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="#66DBDDA7"
        android:ellipsize="middle"
        android:hint="@string/Feedback02"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText9"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="#66DBDDA7"
        android:ellipsize="middle"
        android:hint="@string/feedback01"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPersonName"
        android:text="@string/FeedBack"
        android:textAlignment="center"
        android:textColor="#F4EFEF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <ImageButton
        android:id="@+id/imageButton29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/prof" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>